<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">KiwiSports</string>
    <string name="contentDescription">contentDescription</string>
    <string name="myexit_text_sure">确认</string>
    <string name="myexit_text_off">取消</string>
    <string name="myexit_text_title">确认退出吗？</string>
    <string name="myexit_cancel_title">确认注销当前用户吗？</string>
    <string name="net_tishi">网络连接不可用，请稍后重试</string>
    <string name="drop_dowm">下拉刷新页面</string>
    <string name="release_update">松开刷新页面</string>
    <string name="refreshing">页面正在刷新中</string>
    <string name="loading">数据正在加载中</string>
    <string name="seen_more">上拉加载更多</string>
    <string name="notmore_info">已无更多信息了</string>
    <string name="dialog_logout_title">下线通知</string>
    <string name="dialog_logout_cirt">您的账号已在其他设备登录</string>
    <string name="dialog_update_title">APP不为最新版本，是否进行更新？</string>
    <string name="di">第</string>
    <string name="quan">圈</string>
    <!--  -->
    <string name="wxlogin">微信登录</string>
    <string name="wxlogin_tishi">您还没有安装微信客户端</string>
    <string name="wxlogin_tishifali">登录失败，请重新登录</string>
    <string name="beijing">北京</string>
    <string name="usrecenter_tv_cancel">切换账号</string>
    <string name="usrecenter_tv_mylocation">共享我的实时位置</string>
    <string name="usrecenter_tv_myanonlocation">匿名共享位置</string>
    <string name="usrecenter_tv_lowpower">低电量保护</string>
    <string name="usrecenter_tv_yuyin">语音提示</string>
    <string name="useraccount_ablum_tilte">头像</string>
    <string name="useraccount_nickname">昵称</string>
    <string name="useraccount_sex">性别</string>
    <string name="save">保存</string>
    <string name="useraccount_sporttype">运动偏好</string>
    <string name="useraccount_sex_tv_male">男</string>
    <string name="useraccount_sex_tv_famale">女</string>
    <string name="user_account_avatar_phones">拍照</string>
    <string name="user_account_avatar_selects">从手机相册选择</string>
    <string name="user_account_title">个人资料</string>
    <string name="user_account_etnick">请输入昵称</string>
    <!--  -->
    <string name="venues_add_left">左上角</string>
    <string name="venues_add_right">右下角</string>
    <string name="venues_add_type">场地类型</string>
    <string name="venues_add_locattishi">请选择场地范围定位</string>
    <string name="venues_add_typetishi">请选择场地类型</string>
    <string name="venues_add_name">场地名称</string>
    <string name="venues_add_nametishi">请输入场地名称</string>
    <string name="venues_title">场地</string>
    <string name="next">下一步</string>
    <string name="commit">提交</string>
    <string name="add">添加</string>
    <string name="venues_rank_title">排行榜</string>
    <string name="venues_rank_today">今天</string>
    <string name="venues_rank_all">总榜</string>
    <string name="venues_rank_mi">我</string>
    <string name="venues_status_closed">场地已停用...</string>
    <string name="venues_status_verify">正在审核中...</string>
    <string name="venues_status_fali">审核失败</string>
    <string name="record_title">运动记录</string>
    <string name="record_notdate">暂无记录</string>
    <string name="record_details">详情</string>
    <string name="record_map">地图</string>
    <string name="record_date">数据</string>
    <string name="sporttype">运动类型</string>
    <string name="sporttypelike">运动偏好</string>
    <string name="endlocationcancel">此次运动距离太短，结束将无法保存记录</string>
    <string name="endlocationgpsstart">您的定位服务未开启，请到【设置】中开启定位服务</string>
    <string name="endlocationcommit">是否结束本次运动?</string>
    <string name="endlocationcommitNotnet">暂无网络，是否保存本次运动至有网时自动提交?</string>
    <!-- action -->
    <!-- 下线通知广播 -->
    <string name="action_home">actionhome_Receiver</string>
    <string name="action_home_type_login403">actionhome_login403</string>
    <string name="action_home_type_gotohome">actionhome_gotohome</string>

</resources>