<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_bg"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/usrecenter_tv_cancel"
            style="@style/padd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/usrecenter_tv_cancel"
            android:textColor="@color/text_contents_color"
            android:textSize="@dimen/text_contents_size" />

        <com.KiwiSports.utils.CircleImageView
            android:id="@+id/usrecenter_iv_head"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/contentDescription" />

        <TextView
            android:id="@+id/usrecenter_tv_name"
            style="@style/padd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/text_contents_color"
            android:textSize="@dimen/text_pagetop_size" />

        <RelativeLayout
            style="@style/padd_lefgtright"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white" >

            <TextView
                style="@style/padd_topbottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/usrecenter_tv_mylocation"
                android:textColor="@color/text_contents_color"
                android:textSize="@dimen/text_contents_size" />

            <CheckBox
                android:id="@+id/cb_mylocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/checkbox_selector"
                android:button="@null"
                android:gravity="center" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/padd_leftright" >

            <include layout="@layout/line" />
        </LinearLayout>

        <RelativeLayout
            style="@style/padd_lefgtright"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white" >

            <TextView
                style="@style/padd_topbottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/usrecenter_tv_myanonlocation"
                android:textColor="@color/text_contents_color"
                android:textSize="@dimen/text_contents_size" />

            <CheckBox
                android:id="@+id/cb_myanonlocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/checkbox_selector"
                android:button="@null"
                android:checked="true"
                android:gravity="center" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/padd_leftright" >

            <include layout="@layout/line" />
        </LinearLayout>

        <RelativeLayout
            style="@style/padd_lefgtright"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white" >

            <TextView
                style="@style/padd_topbottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/usrecenter_tv_lowpower"
                android:textColor="@color/text_contents_color"
                android:textSize="@dimen/text_contents_size" />

            <CheckBox
                android:id="@+id/cb_lowpower"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/checkbox_selector"
                android:button="@null"
                android:gravity="center" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/padd_leftright" >

            <include layout="@layout/line" />
        </LinearLayout>

        <RelativeLayout
            style="@style/padd_lefgtright"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white" >

            <TextView
                style="@style/padd_topbottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/usrecenter_tv_yuyin"
                android:textColor="@color/text_contents_color"
                android:textSize="@dimen/text_contents_size" />

            <CheckBox
                android:id="@+id/cb_voice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/checkbox_selector"
                android:button="@null"
                android:gravity="center" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>